lab1/Test/L1-A-10-45.output
Error Type A at Line 11
Error Type B at Line 13
Error Type A at Line 19
Error Type A at Line 21
Error Type B at Line 24
Error Type A at Line 36
Error Type A at Line 41
Error Type B at Line 46
